<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8" >

        <ImageView
            android:id="@+id/iv_app_name"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:background="@color/BaseGray" >

        <EditText
            android:id="@+id/et_link"
            style="@style/MEditText"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:hint="@string/hint_input_link"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/iv_send"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_below="@id/et_link"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />

        <ImageView
            android:id="@+id/iv_help"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignBottom="@id/iv_send"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/iv_send" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/iv_list"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_centerInParent="true" />

                <TextView
                    android:id="@+id/tv_list"
                    style="@style/TF.18.BaseGray"
                    android:layout_below="@id/iv_list"
                    android:gravity="center"
                    android:text="@string/btn_list" />
            </RelativeLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/BaseGray" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/iv_stats"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_centerInParent="true" />

                <TextView
                    android:id="@+id/tv_stats"
                    style="@style/TF.18.BaseGray"
                    android:layout_below="@id/iv_stats"
                    android:gravity="center"
                    android:text="@string/btn_stats" />
            </RelativeLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/BaseGray" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/iv_options"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerInParent="true" />

                <TextView
                    android:id="@+id/tv_options"
                    style="@style/TF.18.BaseGray"
                    android:layout_below="@id/iv_options"
                    android:gravity="center"
                    android:text="@string/btn_options" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>